# fcli

./: LICENSE  README.md  fcli.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
fcli/: __main__.py  analytics.py  config.py  mastodon_api.py  post.py  state.py
fcli-client/: __main__.py  post_list.py  state.py
tests/: config_test.py  post_list_test.py  post_test.py
tests/fixtures/: config.ini  high_quality_accounts.txt  low_quality_accounts.txt  test_post.json  test_post_with_media_attachments.json
tests/fixtures/cache/: 111354288564674030.json  111354323877585511.json
