[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fcli-client"
version = "1.0.1"
authors = [
  { name="Phil Cowans", email="phil-fcli@philcowans.com" },
]
description = "A workflow oriented, command line Mastodon client"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "bs4",
    "lxml",
    "pandas",
    "scipy",
    "requests",
]

[project.urls]
Homepage = "https://github.com/philcowans/fcli"
Issues = "https://github.com/philcowans/fcli/issues"
